--- a/hi_class.ini
+++ b/hi_class.ini
@@ -123,7 +123,7 @@ Omega_smg = -1
 
 
 gravity_model = propto_omega
-parameters_smg = 1., 0., 0., 0., 1.
+parameters_smg = 0.00001, 0.00001, 0.00001, 0.00001, 1.
 
 
 2c) When choosing parameterizations one needs to provide an expansion history of the universe.
@@ -306,11 +306,11 @@ l_linstep = 50
 
 8a) list of output spectra requested
 
-output = tCl,pCl,lCl,mPk
+output = tCl,pCl,lCl,mPk,mTk
 
 8b) file name root 'root' for all output files
 
-root = output/test_
+#root = output/test_
 
 8c) Do you want to write a file with the input parameters you used? Do you want to write a table
     of background quantitites in a file?
